OuiWebsite/css/style.css
@font-face {
    font-family: "circular-std-medium-500";
    src: url("../fonts/circular-std-medium-500.ttf");
}

@font-face {
    font-family: "Caveat-Regular";
    src: url("../fonts/Caveat-Regular.ttf");
}

@font-face {
    font-family: CaveatBold;
    src: url("../fonts/caveat.bold.ttf");
}

@font-face {
    font-family: "BookItalic";
    src: url("Project/fonts/shellypalmer-circular-std-book-italic.ttf");
}

@font-face {
    font-family: CircularMedium;
    src: url(Project/fonts/circular-std-medium-500.ttf);
}

body{
    margin: 0;
    overflow-x: hidden;
    background-attachment: fixed;
}
.main{
    overflow: hidden;
    
}
.Logo{  
    margin-top: 2vh;
    margin-left: 6vw;
    margin-right: 20vw;
    width: 33%;
    height: 78%;
    min-width: 150px;  
    max-width: 150px;
    
}
.navMenu{
    display: flex;
    position: fixed;
    width: 100%;
    height: 10%;
    background-color: #00657C;
    overflow: auto;
    overflow: hidden;
    white-space: nowrap;
    
}
.navMenuUl{
    list-style: none;
    margin:0;
    display: flex;
    align-items: center;
}
.buttons{
    
    margin-right: 3vw;
    font-size: 30px;   
}

.button-book{
    color: #00657C;
    margin-left:1vw; 
    font-size: 30px;   
}
.customLetters{
    color: #00657C;
}
.squareforBooking{
    background-color: #FBEED7;
    width: 10vw;
    height: 5vh;
    border-radius: 25px;
}

.main li a{
    font-family: CaveatBold;
    color: #FBEED7;
    text-decoration: none;
}

.main li{
    
    float: left;
    margin-right: 2vw;
 }

aboutus
{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}

.whyarewedifferent
{
    grid-column: 1/3;
    text-align: center;
    font-size: 64px;
    font-family: "Caveat-Regular";
    color: #00657C;
    padding-top: 200px;
}

.whydifferent
{
    grid-column: 1/3;
    display: flex;
    flex-wrap: wrap;
    width: 700px;
    margin: auto;
    justify-content: space-around;
    flex-direction: row;
    direction: row;
    text-align: center;
}

.whybox
{
    width: 300px;
    height: 300px;  
    border: 4px solid #00657C;
    border-radius: 10px;
    margin: 10px;
    background-color: rgba(251, 238, 215, 0.8);
}

.coffeebeans
{
    padding-top: 30px;
}

.supremebeans, .beansgreattaste
{
    font-family: "circular-std-medium-500";
    padding-top: 20px;
    font-size: 24px;
}

.supremebeans
{
    color: #95261F;   
}

.beansgreattaste
{
    color: #00657C;
}

.aboutus1
{
    grid-column: 3/5;
    grid-row: 1/3;
    background-color: rgba(251, 238, 215, 0.8);
}

.aboutus
{
    font-size: 100px;
    font-family: "Caveat-Regular";
    color: #00657C;
    text-align: center;
    padding-top: 50px;
    padding-bottom: 100px;
}

.aboutustxt
{
    font-family: "circular-std-medium-500";
    font-size: 24px;
    color: #00657C;
    padding-left: 50px;
    padding-right: 100px;
    padding-top: 50px;
}

.menu
{
    display: flex;
    flex-direction: column;
    background-color: #fbeed7;
    margin-inline: 20vw;
    margin-top: 25px;
    border-radius: 10px;
    padding-inline: 10px;
}
.menu b
{
    color: #95261F;
}

#menuh1
{
    text-align: center;
    color: #95261F;
    font-family: "circular-std-medium-500";
}

#menuh2
{
    color: #95261F;
    font-family: "Caveat-Regular";
}
.menulistA
{
    list-style-type: none;
    font-family: "circular-std-medium-500";
}
.menulistB
{
    list-style-type: none;
    font-family: "circular-std-medium-500";
}

.menulistB .menulistA li 
{
    margin: 10px;
}

.EventMainBox
{
    color: #16657E;
    background-color: #FBEED7;

    display: flex;
    flex-direction: column;
    margin-inline: 20vw;
    padding: 10px;
    border-radius: 10px;
    margin-top: 25px;
}
.EventMainBox #Eventh1
{
    display: flex;
    justify-content: center;
    font-family: "Caveat-Regular";
}
.eventbox
{
    display: flex;
    flex-direction: row;
    gap: 1rem;
}

.eventPicture
{
    width: 40%;
}

.EventText
{
    padding-top: 4rem;
    font-family: "circular-std-medium-500";
}

.Reviewsh1
{
    font-family: "circular-std-medium-500";
    color: rgb(22, 101, 126);
    font-size: 3rem;
    text-align: center;
    background-color: rgba(251, 238, 215, 0.9);
    margin:  4rem 0 0 0;
    padding: 3rem 0 0.5rem 0;
}

.usernameReview
{
    font-family: "circular-std-medium-500";
    color: rgb(22, 101, 126);
}

.padding-s
{
    padding-top: 0.8rem;
}

.padding-l
{
    padding-top: 5.5rem;
}
.star
{
    height: 2.5rem;
}

.ppicture
{
    height: 6rem;
    padding-top: 1rem;
}

.scroll-container
{
    display: flex;
    justify-content: flex-start;
    animation: scroll 40s linear infinite;
    width: calc(5*29rem);
}

@keyframes scroll
{
    0%{
        transform: translateX(0);
    }
    100%{
        transform: translateX(-100%);
    }
}
.container
{
    height: 70vh;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: rgba(251, 238, 215, 0.9);
    text-align: center;
    overflow: hidden;
    flex-direction: row;
}

.box1, .box2, .box3, .box4, .box5
{
    height: 23rem;
    width: 28rem;
    border-radius: 1rem;
    background-color: rgb(186, 211, 238);
    padding: 4em 0 0 0;
    margin-inline: 0.5rem;
    display: flex;
    justify-content: center;
    text-align: center;
    flex-shrink: 0;
}

.main-booking{
    display: flex;
    justify-content: center;
    
}
.table1{
    display: flex;
    flex-direction: column;
    background-color: #FBEED7;
    border-radius: 25px;
    margin-top: 10vh;
    height: 80vh;
    max-height: 80vh;
}
.tableForm{
   display: flex;

}
form{
    margin-left: 5vw;
    margin-right: 5vw;
    display: flex;
    flex-direction: column;
    
}
input{
    margin-bottom: 2vh;
    box-sizing: border-box;
    width: auto;
    border: none;
    border-bottom: 2px solid #95261F;
    
}
label{
    font-family: Caveat;
    color: #95261F;
    font-size: 30px;
}

h2{
    display: flex;
    justify-content: center;
    font-family: BookItalic;
    color: #95261F;
    font-size: 40px;
    margin-top: 6vh;
}

.timeDiv{
    display: inline-block;
    
}

.book{
    margin-right: 7vw;
}
.input-Div{
    display: inline;
}

#bookDate{
    width: 20vw;
}
#time{
    display: inline;

}

.tablebook-button{
    align-items: center;
    display: flex;
    justify-content: center;
    margin-top: 2vh;
    border-radius: 20px;
    background-color: #95261F;
    height: 6vh;
}

h3{
color: #FBEED7;

}

.time-Label{
    position: static;
    margin-left: 4.5vw;
}

